# FR3Env

./: .gitignore  MANIFEST.in  README.md  fr3_env.py  hello_world.py  hello_world_hierarchical.py  setup.cfg  waypoint_demo.py  waypoint_hierarchical_demo.py
FR3Env/: fr3_bounding_box_env.py  fr3_crude_env.py  fr3_debug.py  fr3_env.py  fr3_mj_env.py  fr3_with_camera_env.py  hello_world.py  hello_world_camera.py  hello_world_crude.py  hello_world_hierarchical.py  hello_world_with_bounding_boxes.py  load_crude_model.py  urdf_utils.py  waypoint_demo.py  waypoint_hierarchical_demo.py  waypoint_hierarchical_proxqp_demo.py
FR3Env/controller/: __init__.py  proxsuite_solve.py  qp_solver.py  waypoint_controller.py  waypoint_controller_hierarchical.py  waypoint_controller_hierarchical_proxqp.py
FR3Env/robots/: fr3.urdf  fr3.xml  fr3_crude.urdf  fr3_hand_crude.urdf  fr3_on_table.xml  fr3_with_block.xml  fr3_with_bounding_boxes.urdf  fr3_with_camera.urdf
FR3Env/utils/: render_utils.py
controller/: qp_solver.py  waypoint_controller.py  waypoint_controller_hierarchical.py
examples/: MUJOCO_LOG.TXT  depth.py  hello_world.py  hello_world_camera.py  hello_world_depth_image_to_point_cloud.py  hello_world_fr3_mj.py  hello_world_hierarchical.py  hello_world_mj_depth_image_to_point_cloud.py  hello_world_mj_diff_ik.py  hello_world_mj_pick_n_place.py  hello_world_with_bounding_boxes.py  load_crude_model.py  waypoint_demo.py  waypoint_hierarchical_proxqp_demo.py
robots/: fr3.urdf
