[metadata]
name = FR3Env
version = 1.0.0
description = A Simulator for Franka Research 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/FR3Env
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    fr3env-hello-world = FR3Env.hello_world:main
    fr3env-hello-world-hierarchical = FR3Env.hello_world_hierarchical:main
    fr3env-waypoint-demo = FR3Env.waypoint_demo:main
    fr3env-waypoint-hierarchical-demo = FR3Env.waypoint_hierarchical_demo:main
    fr3env-waypoint-hierarchical-proxqp-demo = FR3Env.waypoint_hierarchical_proxqp_demo:main
