[metadata]
name = FR3Env
version = 1.0.0
description = A Simulator for Franka Research 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/FR3Env
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.22.3
    scipy>=1.8.0
    pybullet==3.2.5
    gymnasium==0.26.3
    pyquaternion
    mujoco>=3.0.0
